# CoraxCoLABs-GAP-GreenAutomatedPlatform---GAPbot

./: AGENTS.MD  ARCHITECTURE.md  BOM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HARDWARE_INTEGRATION.md  INCLUSIVE_DESIGN_GUIDELINES.md  INTEGRATION_MANIFESTO.md  LICENSE  Makefile  README.md  SECURITY.md  SIMULATION.md  anvandningsomraden.txt  docker-compose.yml  pr-body.md  pr_body.md  pr_desc.txt  pr_description.md  pr_description.txt  public_architecture_export.md  ros_entrypoint.sh
.Jules/: palette.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_integration.md
.github/workflows/: ci.yml  linting.yml  ros2_build_check.yml
.jules/: bolt.md  masterjournal.md  palette.md  sentinel.md
cad/payload_dropper/: README.md
core_slam/: README.md  lidar_fusion_node.py
docs/: 01-platform-architecture.md  02-hardware-specs.md  03-ai-and-vision.md  API_STUBS.md  hardware_integration.md  llms.txt
gap_zero_trust/: README.md  test_zero_trust_handshake.py  zero_trust_handshake.py
gapdrone_edge_ai/: README.md  hailo_inference_pipeline.py
hardware/gapbot/: bom.md
mission-control/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
public_interfaces/: CMakeLists.txt  README.md  package.xml
simulation_stubs/: README.md  gap_forest_world.sdf
src/gap_mesh_comm/: package.xml  setup.cfg  setup.py
src/gap_mesh_comm/gap_mesh_comm/: __init__.py  swarm_communicator.py
src/gap_mesh_comm/test/: test_swarm_communicator.py
(+15 files in other folders)
